# swedeb-api

./: .env.example  .env_example  .gitignore  .pylintrc  .releaserc.yml  AGENTS.md  CHANGELOG.md  DEPLOY.md  DEPLOYMENT.md  DESIGN.md  LICENSE  Makefile  README.md  REFACTORING_COMPLETE.md  SESSION_RESUME.md  TEST_ISOLATION_REVIEW.md  TODO.md  WORKFLOW_ARCHITECTURE.md  WORKFLOW_GUIDE.md  deploy-to-target.sh  main.py  manage-target  package-lock.json  package.json  pyproject.toml  requirements.txt
.chats/: 20251024-chat.json
.github/: copilot-instructions.md
.github/instructions/: design.instructions.md  development.instructions.md  diagrams.instructions.md  github-workflow.instructions.md  operations.instructions.md  proposal-writing-guide.instructions.md  python.instructions.md  testing.instructions.md
.github/scripts/: build-and-push-image.sh  prepare-release-assets.sh  publish-docker.sh
.github/workflows/: ci-ghcr.yml  release.yml  staging.yml  test.yml
api_swedeb/: app.py  celery_app.py  celery_tasks.py
api_swedeb/api/: container.py  dependencies.py  metadata.py  metadata_router.py  params.py  path_enums.py  tool_router.py  tools.py
api_swedeb/core/: __init__.py  codecs.py  load.py  person_codecs.py  speech.py  speech_enrichment.py  speech_index.py  speech_merge.py  speech_repository.py  speech_repository_fast.py  speech_store.py  speech_text.py  speech_utility.py  trends_data.py  utility.py  word_trends.py
api_swedeb/legacy/: __init__.py  load.py  speech_lookup.py
api_swedeb/mappers/: __init__.py  cqp_opts.py  kwic.py  ngrams.py  speeches.py  word_trends.py
api_swedeb/schemas/: __init__.py  bulk_archive_schema.py  kwic_schema.py  metadata_schema.py  ngrams_schema.py  sort_order.py  speech_text_schema.py  speeches_schema.py  word_trends_schema.py
api_swedeb/scripts/: download_speeches.py  generate_speech_archive.py
api_swedeb/workflows/: build_speech_corpus.py
config/: config.yml  config_v1.4.1_v1.1.3.yml  debug.config.yml  dev_swedeb.yml
docker/: .dockerignore  .env.production  .env.staging  DOCKER_BUILD_TESTING.md  Dockerfile  Dockerfile.staging  LOCAL_TESTING.md  Makefile  Makefile.dev  README-MAKE.md  README.md  TEST_RESULTS.md  build-local-image.sh  compose.local.yml  compose.production.yml  compose.staging.yml  compose.test.yml  compose.yml  docker-compose-staging.yml  docker-compose.env  docker-compose.yml  download-frontend.sh  entrypoint.sh  healthcheck.sh  main.py  quick-test.sh  redis.container  test-branch-detection.sh  test-fallback-only.sh  test-local.sh  test-network.sh  test-readonly-workaround.sh  test-sha256-logic.sh
docker/build-from-source/: Dockerfile
docker/config/: config.yml  config_v1.1.0.yml  config_v1.4.1_v1.1.3.yml
docker/dependencies/: Dockerfile
docker/deployment/: example-decoupled.env
docker/nginx/: riksdagsdebatter.conf
docker/quadlets/: celery-worker.container  multiprocessing-worker.container  redis.container  swedeb-staging-app.container  swedeb-staging-app.network
docs/: ABSTRACT.md  DEPLOYMENT.md  DEPLOY_DOCKER.md  DEPLOY_PODMAN.md  DESIGN.md  DEVELOPER.md  DEVELOPMENT.md  DIAGRAMS.md  FAQ.md  FRONTEND_ASSET_FIXES.md  FRONTEND_ASSET_FLOW.md  FRONTEND_AUTO_DETECTION.md  FRONTEND_WORKFLOW_IMPROVEMENTS.md  GROUP_DTM_PERFORMANCE_REVIEW.md  IMPLEMENTATION_SUMMARY.md  MULTIUSER_USAGE_ASSESSMENT.md  OPERATIONS.md  PROPOSAL_WRITING_GUIDE.md  QUICK-INSTALL-GUIDE.md  README-DECOUPLED.md  TECHNICAL-REVIEW-DECOUPLING.md  TESTING.md  TROUBLESHOOTING.md  USED_DATA.md  WORKFLOW_ARCHITECTURE.md  WORKFLOW_GUIDE.md
docs/archive/: ADD_ARQ_AND_REDIS.md  DEPLOY_DOCKER.md  DEPLOY_PODMAN.md  DTM_STORAGE_OPTIMIZATION.md  ENVIRONMENT_VARIABLE.md  GROUP_DTM_PERFORMANCE_REVIEW.md  KWIC_PERFORMANCE_OPTIMISATION.md  RECENT_IMPROVEMENTS.md  RECENT_SWEDEB_IMPROVMENTS.md  REFACTORING_PLAN.md  RELEASE-NOTES-DECOUPLING.md  SESSION_2026-04-23_CELERY_KWIC.md  SESSION_RESUME_2026-04-21.md  TEST_ISOLATION_REVIEW.md  TEST_RESULTS.md  TROUBLESHOOTING.md  WORD_TRENDS_OPTIMIZATION.md
docs/change_requests/: ADD_CELERY_AND_REDIS.md  KWIC_ASYNC_ARCHIVE_EXPORT.md  KWIC_PERFORMANCE_OPTIMISATION.md  MERGED_SPEECH_CORPUS_DESIGN.md  MERGED_SPEECH_CORPUS_IMPLEMENTATION_PLAN.md  PAGED_KWIC_NGRAM_RESULTS.md  PAGED_KWIC_RESULTS_DESIGN.md  PAGED_KWIC_RESULTS_PLAN.md  PAGED_KWIC_RESULTS_VALIDATION.md  PAGED_NGRAM_RESULTS_DESIGN.md  PAGED_WORD_TREND_SPEECHES_DESIGN.md  REPLACE_PERSON_CODECS_DECODE_WITH_PREBUILT_INDEX.md  SLIDING-WINDOW-TICKET-TTL.md  SPEECHES_DEDICATED_QUEUE_FOLLOWUP.md  SPEECH_ARCHIVE_GENERATE_SCRIPT.md  TICKET_BASED_BULK_ARCHIVE_GENERATION.md  TICKET_DOWNLOAD_URL_RETRIEVAL_PAGE.md
docs/checklists/: SMOKE_TEST_CHECKLIST.md
docs/done/: MULTIUSER_USAGE_ASSESSMENT.md
docs/proposals/: local-container-testing-workflow.md  progressive-kwic-loading.md
docs/templates/: PROPOSAL_TEMPLATE.md
penelope/common/: distance_metrics.py  word_trends.py
penelope/corpus/: __init__.py  document_index.py  token2id.py
penelope/utility/: __init__.py  _decorators.py  file_utility.py  filename_fields.py  filename_utils.py  pandas_utils.py  pivot_keys.py  pos_tags.py  streamify_source.py  utils.py  zip_utils.py
scripts/: benchmark_kwic.py  cwb-bench.sh  diagnose_memory.py  generate-archive.sh  loadtest_ticket_deployments.py
tests/: README.md  config.py  config.yml  conftest.py  profile_kwic.py  test.env  test_bug.py  test_codex.py  test_common_params.py  test_corpus.py  test_cwb.py  test_endpoints.py  test_kwic.py  test_load_corpus.py  test_mappers.py  test_meta.py  test_ngrams.py  test_speakers.py  test_speeches.py  test_utility.py  test_word_trends.py
tests/api_swedeb/: test_celery_app.py  test_celery_integration.py  test_celery_tasks.py
tests/benchmarks/: test_download_service.py  test_word_trends_optimization.py
tests/core/: test_codecs.py  test_codex.py  test_cwb.py  test_kwic.py  test_load.py  test_ngrams.py  test_spech_index.py  test_speech.py  test_utility.py
tests/integration/: __init__.py  test_bug.py  test_cwb_integration.py  test_download_service.py  test_endpoints.py  test_kwic.py  test_kwic_core.py  test_load_corpus.py  (+16 more)
(+217 files in other folders)
