[project]
name = "api-swedeb"
version = "0.6.0"
description = ""
authors = [{name = "rebeckaw", email = "rebecka.weegar@umu.se"}]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-dotenv",
    "cwb-ccc",
    "pydantic",
    "scipy",
    "numpy",
    "pyarrow",
    "loguru",
    "requests",
    "more-itertools",
]

[project.optional-dependencies]
dev = [
    "black",
    "httpx",
    "pytest",
    "pylint",
    "ruff",
    "pyinstrument",
    "pytest-cov",
    "isort",
]

[tool.black]
line-length = 120
target-version = ["py312"]
skip-string-normalization = true


[tool.pylint.format]
max-line-length = 120

[tool.ruff]
target-version = "py312"
line-length = 120
# output-format = "grouped"
exclude = [ ".eggs", ".git", ".ruff_cache", ".venv", "dist" ]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.coverage]
    [tool.coverage.run]
    omit = [
        '__init__.py',
        '__paths__.py',
        'tests/*',
        'api_swedeb/schemas'
    ]

    [tool.coverage.report]
    skip_empty = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --quiet --tb=short --color=no --durations=0 -W ignore::DeprecationWarning"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api_swedeb", "penelope"]